Fixed bug that caused issues with loading site on firefox

--- a/css/reform.css
+++ b/css/reform.css
@@ -16,6 +16,7 @@ body{
 }
 #map{
     min-height: 100%;
+    height: 100%;
 }
 #legend{
 position: absolute;
